@@ -1,3 +1,8 @@
+Last-Update: 2017-08-28
+Forwarded: https://github.com/prometheus/client_golang/issues/338
+Author: Martín Ferrari <tincho@debian.org>
+Description: Disable flaky test.
+
 --- a/prometheus/summary_test.go
 +++ b/prometheus/summary_test.go
 @@ -289,6 +289,7 @@
